--- a/OctopusContrib.NewRelic.nuspec
+++ b/OctopusContrib.NewRelic.nuspec
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-        <id>Specify</id>
+        <id>OctopusContrib.NewRelic</id>
         <version>1.0.0.0</version>
         <title />
-        <authors>Jasper Nygaard, Rasmus Mikkelsen</authors>
+        <authors>Jasper Nygaard</authors>
         <owners />
-        <projectUrl>https://github.com/octopuscontrib/OctoPack.NewRelic</projectUrl>
+        <projectUrl>https://github.com/octopuscontrib/OctopusContrib.NewRelic</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Octopus Deployment package for New Relic</description>
         <language>en-US</language>
