--- a/OctopusContrib.NewRelic.nuspec
+++ b/OctopusContrib.NewRelic.nuspec
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+<package xmlns="http:/schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>OctopusContrib.NewRelic</id>
-        <version>1.0.0.0</version>
+        <version>1.0.3.0</version>
         <title />
         <authors>Jasper Nygaard</authors>
         <owners />
